--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,33 @@
+# =============== #
+# Unity generated #
+# =============== #
+Temp/
+Library/
+Library/*
+# ===================================== #
+# Visual Studio / MonoDevelop generated #
+# ===================================== #
+ExportedObj/
+obj/
+*.svd
+*.userprefs
+/*.csproj
+*.pidb
+*.suo
+/*.sln
+*.user
+*.unityproj
+*.booproj
+Assembly-CSharp-vs.csproj
+Assembly-CSharp.csproj
+# ============ #
+# OS generated #
+# ============ #
 .DS_Store
-Assets/.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
