--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,7 +45,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Background.cs" />
+     <Compile Include="Assets\scripts\Background.cs" />
      <Compile Include="Assets\scripts\GameControll.cs" />
      <Compile Include="Assets\scripts\MainCamera.cs" />
      <Compile Include="Assets\scripts\PenguinController.cs" />
