--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,8 +46,11 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\scripts\Background.cs" />
      <Compile Include="Assets\scripts\GameControll.cs" />
+     <Compile Include="Assets\scripts\MainCamera.cs" />
      <Compile Include="Assets\scripts\PenguinController.cs" />
+     <Compile Include="Assets\scripts\Wave.cs" />
      <Compile Include="Assets\scripts\destroy.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
